# finess

./: .gitignore  1d-euler-harten_shock_tube.doxyconf  CMakeLists.txt  LICENSE.txt  README.md
apps/1d/: CMakeLists.txt
apps/1d/acoustics/lib/: AuxFunc.cpp  ConstructDiffTransformL.cpp  D2FluxFunc.cpp  DFluxFunc.cpp  FluxFunc.cpp  Makefile.defs  ProjectLeftEig.cpp  ProjectRightEig.cpp  SetWaveSpd.cpp
apps/1d/acoustics/two_waves/: ConSoln.cpp  Makefile  QinitFunc.cpp  parameters.ini  plotq1.m  plotq1.py  run_cfl_sample.py  run_l2_error.py  run_tvd_plot.py
apps/1d/advection/: CMakeLists.txt  ConSoln.cpp
apps/1d/advection/c0deriv/: ConSoln.cpp  Makefile  QinitFunc.cpp  SetBndValues.cpp  WenoReconstruct.cpp  generate_iniparams.py  parameters.ini  plot_tv.py  plotq1.m  plotq1.py
apps/1d/advection/lib/: AuxFunc.cpp  ConSoln.cpp  ConstructDiffTransformL.cpp  ConstructLxWL.cpp  DogSolveUser.cpp  FinSolveDiffTransform.cpp  FinSolveDiffTransformFluxLimiter.cpp  FinSolveMD.cpp  FinSolveUser.cpp  Makefile.defs  SetBndValues.cpp  run_sample.py
apps/1d/advection/smooth_example/: ConSoln.cpp  ConstructIntegratedF.cpp  ConstructIntegratedF.old.cpp  DFluxFunc.cpp  DogSolveUser.cpp  FinSolveDiffTransform.cpp  FinSolveMD.cpp  FinSolveUser.cpp  FluxFunc.cpp  Makefile  QinitFunc.cpp  SetBndValues.cpp  SourceTermFunc.cpp  cfl_conservation.py  check_total_variation.py  generate_iniparams.py  parameters.ini  params_template.py  plot_tv.py  plotq1.py  run_cfl_sample.py  run_l2_error.py  run_sample.py
apps/1d/advection/smooth_example_with_source/: plotq1.py
apps/1d/advection/sq_wave/: CMakeLists.txt  ConSoln.cpp  ConstructIntegratedF.cpp  FinSolveMD.cpp  FinSolveUser.cpp  FluxFunc.cpp  Makefile  ProjectLeftEig.cpp  ProjectRightEig.cpp  QinitFunc.cpp  cfl_conservation.py  cfl_total_variation.py  check_total_variation.py  parameters.ini  plot_cons.m  plot_data.py  plot_tv.py  plotq1.m  plotq1.py  plotq1_mod.py  run_cfl_sample.py  run_sample.py  run_tvd_plot.py
apps/1d/buckley_lev/: CMakeLists.txt  DFluxFunc.cpp
apps/1d/buckley_lev/lib/: AuxFunc.cpp  FluxFunc.cpp  Makefile.defs
apps/1d/buckley_lev/sq_wave/: CMakeLists.txt  ConSoln.cpp  ConstructIntegratedF.cpp  Makefile  parameters.ini  parameters.new.ini  plotq1.py  run_cfl_sample.py
apps/1d/burgers/: CMakeLists.txt  D2FluxFunc.cpp
apps/1d/burgers/lib/: AuxFunc.cpp  ConstructDiffTransformL.cpp  FluxFunc.cpp  Makefile.defs
apps/1d/burgers/shock/: Makefile  QinitFunc.cpp  SetBndValues.cpp  parameters.ini
apps/1d/burgers/sine_to_n/: CMakeLists.txt  Makefile  QinitFunc.cpp  SetBndValues.cpp  convergence_analysis.py  parameters.ini  params_template.py  plotq1.m  run_convergence.m  run_sample.py
apps/1d/euler/: CMakeLists.txt  ProjectLeftEig.cpp
apps/1d/euler/blast/: Makefile  ProjectRightEig.cpp  QinitFunc.cpp  SetBndValues.cpp  parameters.ini  plotq1.m  plotq1.py
apps/1d/euler/double_rarefaction/: Makefile  QinitFunc.cpp  SetBndValues.cpp  parameters.ini  plotq1.m  run_cfl_sample.py
apps/1d/euler/exact/: D2FluxFunc.cpp  Makefile  QinitFunc.cpp  parameters.ini  run_sample.py
apps/1d/euler/harten_shock_tube/: D2FluxFunc.cpp  FluxFunc.cpp  Makefile  ProjectLeftEig.cpp  ProjectRightEig.cpp  QinitFunc.cpp  SetBndValues.cpp  SetWaveSpd.cpp  SourceTermFunc.cpp  cfl_total_variation.py  main.cpp  mainpage.dox  parameters.ini  plotq1.m  plotq1.py  run_cfl_sample.py  surprises.dox
apps/1d/euler/lib/: ApplyMPPLimiter1D.cpp  AuxFunc.cpp  ConstructDiffTransformL.cpp  DFluxFunc.cpp  FluxFunc.cpp  Makefile.defs  ProjectRightEig.cpp  SetBndValues.cpp  SetWaveSpd.cpp
apps/1d/euler/sedov_blast/: IniParams.cpp  IniParams.h  QinitFunc.cpp  parameters.ini  plotq1.m
apps/1d/euler/shock_entropy/: D2FluxFunc.cpp  Makefile  QinitFunc.cpp  parameters.ini  plotq1.m  plotq1.py
apps/1d/euler/shock_tube/: Makefile  QinitFunc.cpp  parameters.ini  plotq1.m  plotq1.py
apps/1d/euler/test_exact/: Makefile  ProjectLeftEig.cpp  QinitFunc.cpp  SetBndValues.cpp  parameters.ini  params_template.py  run_sample.py
apps/1d/euler_radial_of_spherically_symmetric_3d/: ApplyMPPLimiter1D.cpp  CMakeLists.txt  DFluxFunc.cpp  ProjectLeftEig.cpp
apps/1d/euler_radial_of_spherically_symmetric_3d/lib/: D2FluxFunc.cpp  FluxFunc.cpp  Makefile.defs  ProjectRightEig.cpp  SetWaveSpd.cpp
apps/1d/euler_radial_of_spherically_symmetric_3d/smooth/: Makefile  QinitFunc.cpp  SetBndValues.cpp  SourceTermFunc.cpp  parameters.ini
apps/1d/isentropic_euler/lib/: ApplyMPPLimiter1D.cpp  ConstructDiffTransformL.cpp  FinSolveDiffTransform.cpp  FluxFunc.cpp  Makefile.defs  ProjectLeftEig.cpp  ProjectRightEig.cpp  SetWaveSpd.cpp
apps/1d/isentropic_euler/test_exact/: Makefile  QinitFunc.cpp  convergence_analysis.py  create_convergence_table.py  generate_iniparams.py  hyperpyws_path.py  parameters.ini  parameters.ini_DT  parameters_DT.ini  params_template.py  plotq1.m  plotq1.py  run_l2_error.py  run_sample.py  table.tex
apps/1d/mhd/: CMakeLists.txt  ProjectLeftEig.cpp
apps/1d/mhd/alfven/: AfterQinit.cpp  Makefile  QinitFunc.cpp  SetBndValues.cpp  TODO.md  generate_iniparams.py  parameters.ini  plotq1.m
apps/1d/mhd/lib/: Makefile.defs  ProjectRightEig.cpp
apps/1d/mhd/shock_tube/: AfterQinit.cpp  CMakeLists.txt  FluxFunc.cpp  InitialParams.cpp  MHDParams.cpp  Makefile  QinitFunc.cpp  SetBndValues.cpp  SetWaveSpd.cpp  generate_iniparams.py  parameters.ini  plotq1.m  plotq1.py  this_app_params.py
apps/2d/: CMakeLists.txt
apps/2d/advection/: CMakeLists.txt
apps/2d/euler/: ApplyMPPLimiter2D.cpp  CMakeLists.txt  SetWaveSpd.cpp
apps/2d/mhd/: AfterQinit.cpp  AfterStep.cpp  CMakeLists.txt
apps/2d/shallow_water/: AuxFunc.cpp  CMakeLists.txt  D2FluxFunc.cpp  SetWaveSpd.cpp
apps/3d/: CMakeLists.txt
apps/3d/advection/: CMakeLists.txt  D2FluxFunc.cpp  DFluxFunc.cpp  SetWaveSpd.cpp
apps/3d/burgers/: CMakeLists.txt  SetWaveSpd.cpp
apps/3d/euler/: AuxFunc.cpp  CMakeLists.txt  D2FluxFunc.cpp  ProjectLeftEig.cpp
apps/3d/mhd/: AfterStep.cpp  ApplyMPPLimiter3D.cpp  CMakeLists.txt  ConstructHJ_L.cpp  D2FluxFunc.cpp  DFluxFunc.cpp  FluxFunc.cpp  SetWaveSpd.cpp
(+906 files in other folders)
